MINOR: Replace Arrays.asList() with List.of() in tools tests
Replaces Arrays.asList() with List.of() in DumpLogSegmentsTest and
StreamsGroupCommandTest, as suggested in review.

The three call sites in DumpLogSegmentsTest only read through the
returned ListIterator (hasNext/next/previous), so an immutable list is
fine. The one in StreamsGroupCommandTest is immediately copied into an
ArrayList, so mutability of the source does not matter.

The java.util.Arrays imports are kept, since both files still use
Arrays.stream().

verified with `./gradlew tools:test --tests DumpLogSegmentsTest --tests StreamsGroupCommandTest`